--- a/blog/templates/homeone.html
+++ b/blog/templates/homeone.html
@@ -17,6 +17,8 @@
 <div>
     <input type="button" id="viewData" class="btn btn-primary" value="View Data">
 </div>
+<a href="post_new">New post</a>
+<a href="fetchData">View post</a>
 <script>
     $(document).on('click', '#postSave', function() {
                      window.location.href="/postform";
